move_topic_to_stream: Fix clipped stream select dropdown.
The stream select dropdown's height was clipped by the modal
container which resulted in the dropdown only being displayed
partially. We could either move the dropdown to under `body` or use
`position: fixed` for it be able to show outside parent container.
We go for the later option.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -707,5 +707,11 @@ ul {
             margin: 0 5px 5px -10px;
             text-indent: 10px;
         }
+
+        .dropdown-menu {
+            position: fixed;
+            top: 125px;
+            left: 40px;
+        }
     }
 }
